--- a/app/views/partials/theme/simple/items/edit.liquid
+++ b/app/views/partials/theme/simple/items/edit.liquid
@@ -1,11 +1,5 @@
-<div class="row">
-  <div class="u-full-width">
-    <h2>edit item form</h2>
-  </div>
+<div class="container flex flex-wrap items-center px-5 mx-auto">
+  <h1 class="text-3xl font-medium text-gray-900 title-font">Edit Item</h1>
 </div>
 
-<div class="row">
-  <div class="u-full-width">
-    {% include 'theme/simple/items/form', item: item %}
-  </div>
-</div>
+{% include 'theme/simple/items/form', item: item %}
