--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -1,38 +1,10 @@
-    <!-- <img alt="cover" src="{% echo 'images/icons/' | append: item.properties.cover_photo | append: '.svg' | asset_url %}" width="100%"/>
-
-    <h2>{% print item.properties.name %}</h2>
-    <div>{% print item.properties.description %}</div>
-
-    <ul class="tags">
-      <li><strong>tags: </strong></li>
-      {% for tag in item.properties.tags %}
-        <li>{% print tag %}</li>
-      {% endfor %}
-    </ul>
-
-    {% include 'theme/simple/business_card', user: item.properties.owner %}
-
-    {% if item.properties.owner == context.session.current_user_id %}
-      <a href="/items/edit?id={% print item.id %}" class="button">edit</a>
-      <form action="/items/delete" method="post">
-        <input type="hidden" name="id" value="{% print item.id %}">
-        <input type="submit" value="delete">
-      </form>
-    {% endif %}
-
-    <form action="/orders/new" method="get">
-      <input type="hidden" name="item_id" value="{% print item.id %}">
-      <input type="submit" value="buy for {% echo item.properties.price | pricify %}" class="button-primary">
-    </form> -->
-
-
 <section class="overflow-hidden text-gray-700 body-font">
   <div class="container px-5">
     <div class="flex flex-wrap">
       <div class="relative w-1/2">
-        <img alt="{{ item.properties.name }}" class="object-cover object-center w-full h-64 rounded lg:h-auto" src="https://dummyimage.com/800x4:3/eee/000&text={% print item.properties.name %}">
-        <img alt="{% print item.properties.name %}"
-          class="absolute top-0 left-0 w-10 h-10 mt-2 ml-2 opacity-50"
+        <img alt="{{ item.properties.name }}" class="object-cover object-center w-full h-64 rounded lg:h-auto"
+          src="https://dummyimage.com/800x4:3/eee/000&text={% print item.properties.name %}">
+        <img alt="{% print item.properties.name %}" class="absolute top-0 left-0 w-10 h-10 mt-2 ml-2 opacity-50"
           src="{{ 'images/icons/' | append: item.properties.cover_photo | append: '.svg' | asset_url }}" />
       </div>
 
@@ -47,12 +19,12 @@
 
         <div class="flex flex-wrap mb-4">
           {% if item.properties.tags %}
-            <ul class="flex w-full tags">
-              <li><strong>tags: </strong></li>
-              {% for tag in item.properties.tags %}
-                <li class="ml-2">{{ tag }}</li>
-              {% endfor %}
-            </ul>
+          <ul class="flex w-full tags">
+            <li><strong>tags: </strong></li>
+            {% for tag in item.properties.tags %}
+            <li class="ml-2">{{ tag }}</li>
+            {% endfor %}
+          </ul>
           {% endif %}
         </div>
 
@@ -62,14 +34,17 @@
           <div class="flex items-center">
             <span class="mr-3">Size</span>
             <div class="relative">
-              <select class="py-2 pl-3 pr-10 text-base border border-gray-400 rounded appearance-none focus:outline-none focus:border-blue-500">
+              <select
+                class="py-2 pl-3 pr-10 text-base border border-gray-400 rounded appearance-none focus:outline-none focus:border-blue-500">
                 <option>SM</option>
                 <option>M</option>
                 <option>L</option>
                 <option>XL</option>
               </select>
-              <span class="absolute top-0 right-0 flex items-center justify-center w-10 h-full text-center text-gray-600 pointer-events-none">
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4" viewBox="0 0 24 24">
+              <span
+                class="absolute top-0 right-0 flex items-center justify-center w-10 h-full text-center text-gray-600 pointer-events-none">
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  class="w-4 h-4" viewBox="0 0 24 24">
                   <path d="M6 9l6 6 6-6"></path>
                 </svg>
               </span>
@@ -88,18 +63,18 @@
         </div>
 
         {% if item.properties.owner == context.session.current_user_id %}
-          <p class="py-4 mt-4 border-t border-blue-300">Item Administration</p>
-          <span class="flex">
-            <a href="/items/edit?id={{ item.id }}" class="button">Edit</a>
+        <p class="py-4 mt-4 border-t border-blue-300">Item Administration</p>
+        <span class="flex">
+          <a href="/items/edit?id={{ item.id }}" class="button">Edit</a>
 
-            <form action="/items/delete" method="post" class="ml-2">
-              <input type="hidden" name="id" value="{{ item.id }}">
-              <button value="delete" class="button button-secondary">Delete</button>
-            </form>
-          </span>
+          <form action="/items/delete" method="post" class="ml-2">
+            <input type="hidden" name="id" value="{{ item.id }}">
+            <button value="delete" class="button button-secondary">Delete</button>
+          </form>
+        </span>
         {% endif %}
 
-        </div>
+      </div>
     </div>
   </div>
 </section>
