search form supported by search_form object
updated after triggering update/create item

--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,4 +1,6 @@
 {% liquid
   include 'lib/items/index'
-  include 'theme/simple/home/index', items: context.exports.items
+  include 'lib/search/main'
+
+  include 'theme/simple/home/index', items: context.exports.items, filters: context.exports.search_form.properties
 %}
