--- a/app/views/pages/search.liquid
+++ b/app/views/pages/search.liquid
@@ -2,6 +2,8 @@
 slug: s
 ---
 
-{% include 'lib/items/search', query: context.params %}
-
-{% include 'theme/simple/home/index', items: context.exports.items, search: context.exports.search  %}
+{% liquid
+  include 'lib/items/search', query: context.params
+  include 'lib/search/main'
+  include 'theme/simple/home/index', items: context.exports.items, search: context.exports.search, filters: context.exports.search_form.properties
+%}
