--- a/app/views/partials/lib/items/main.liquid
+++ b/app/views/partials/lib/items/main.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  assign icons = "alarm ambulance ban bandage calendar flame disc crop command compass copy stack star cut globe glass-full virus key trophy wand woman" | split: ' '
+  assign icons = "alarm ambulance ban bandage calendar car yin-yang flame disc crop command compass copy stack star cut globe glass-full virus key trophy wand woman" | split: ' ' | sort
   export icons, namespace: 'lib'
 
   if id
