--- a/app/views/partials/theme/simple/home/index.liquid
+++ b/app/views/partials/theme/simple/home/index.liquid
@@ -1,3 +1,2 @@
-{% include 'theme/simple/home/search', query: search.query %}
-
+{% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
 {% include 'theme/simple/items/index', items: items %}
