add tag to search

--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,16 +1,16 @@
 <form action="/s">
-  <input class="form-input my-4 block w-full"
+  <input class="form-input my-4 w-2/4"
     name="k"
     type="text"
     value="{% echo query.k %}"
     placeholder="Search"/>
 
-  filter by tags:
-  <select class="form-input my-4 block w-full" name="tag">
-    {% for tag in filters.tags %}
-      <option value="{% echo tag %}"{% if query.tag == tag %}selected{%endif%}>{% echo tag %}</option>
-    {% endfor %}
-  </select>
+    <select class="form-input w-1/4" name="tag">
+      <option value=""> tag </option>
+      {% for tag in filters.tags %}
+        <option value="{% echo tag %}"{% if query.tag == tag %}selected{%endif%}>{% echo tag %}</option>
+      {% endfor %}
+    </select>
 
-  <input name="submit" type="submit" value="search"/>
+    <input name="submit" type="submit" value="search" class="p-2 w-1/5"/>
 </form>
