--- a/app/views/pages/items/index.liquid
+++ b/app/views/pages/items/index.liquid
@@ -3,7 +3,7 @@ slug: s
 ---
 
 {% liquid
-  include 'lib/items/search', query: context.params
+  include 'lib/items/search', query: context.params, limit: 200
   include 'lib/search/main'
   include 'theme/simple/home/index', items: context.exports.items, search: context.exports.search, filters: context.exports.search_form.properties
 %}
