--- a/app/views/partials/theme/simple/users/new.liquid
+++ b/app/views/partials/theme/simple/users/new.liquid
@@ -1,2 +1,11 @@
-<h1>Create an Account</h1>
-{% include 'theme/simple/users/form' %}
+<section class="text-gray-700 body-font">
+  <div class="container items-center px-5 mx-auto">
+    <div class="mx-auto mb-2 text-center lg:w-2/6 md:w-1/2">
+      <h1 class="text-3xl font-medium text-gray-900 title-font">Create an Account</h1>
+    </div>
+
+    <div class="w-full p-8 mx-auto mt-10 bg-gray-200 rounded-lg lg:w-2/6 md:w-1/2 md:mt-0">
+      {% include 'theme/simple/users/form' %}
+    </div>
+  </div>
+</section>
