--- a/app/views/partials/lib/users/create.liquid
+++ b/app/views/partials/lib/users/create.liquid
@@ -2,6 +2,6 @@
   include 'lib/users/validate', object: user
   if context.exports.object.valid
     include 'lib/users/save', object: context.exports.object
-    include 'lib/sessions/create', object.context.exports.object
+    include 'lib/sessions/create', object: context.exports.object
   endif
 %}
