--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -1,8 +1,8 @@
 ---
 method: post
 ---
-
 {% liquid
+  include 'lib/must_be_authenticated'
   include 'lib/items/delete', id: params.id
   include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
 %}
