--- a/app/views/partials/lib/orders/search.liquid
+++ b/app/views/partials/lib/orders/search.liquid
@@ -3,7 +3,7 @@
 
   if id
     graphql order  = 'orders/search', id: id, limit: 1 | fetch: 'orders' | fetch: 'results' | first
-    export orders
+    export order
   endif
 
   export orders
