--- a/app/views/partials/async-operation.liquid
+++ b/app/views/partials/async-operation.liquid
@@ -1,4 +1,4 @@
-<h6>waiting for <code>{% print uuid %}</code> operation to accomplish</h6>
+<p class="text-lg font-light">Waiting for <code class="font-semibold">{{ uuid }}</code> operation to complete.</p>
 
 <script>
   setTimeout(
