--- a/app/views/partials/authenticity_token.liquid
+++ b/app/views/partials/authenticity_token.liquid
@@ -1,1 +1,1 @@
-<input type="hidden" name="authenticity_token" value="{% print context.authenticity_token %}">
+<input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
