--- a/app/views/partials/theme/simple/dashboard/orders/actions.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions.liquid
@@ -3,7 +3,8 @@
     {% include 'authenticity_token' %}
     <input type="hidden" name="status" value="app.order_statuses.paid"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
-    <input name="" type="submit" value="{% echo 'app.mark-as-paid' | t %}"/>
+
+    <button name="" value="{{ 'app.mark-as-paid' | t }}" class="button">{{ 'app.mark-as-paid' | t }}</button>
   </form>
 {% endif %}
 
@@ -12,6 +13,7 @@
     {% include 'authenticity_token' %}
     <input type="hidden" name="status" value="app.order_statuses.paid"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
-    <input name="" type="submit" value="{% echo 'app.pay' | t %}"/>
+
+    <button name="" value="{{ 'app.pay' | t }}" class="button">{{ 'app.pay' | t }}</button>
   </form>
 {% endif %}
