--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -1,30 +1,36 @@
-<h5><a href="/dashboard">{% echo 'app.dashboard' | t %}</a> / {{ 'app.' | append: role | t }} / {% echo 'app.orders' | t %}</h5>
+<h1 class="mb-8 ml-4 text-3xl font-medium text-gray-900 title-font">
+  <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
+  / {{ 'app.' | append: role | t }}
+  / {{ 'app.orders' | t }}
+</h1>
 
-<table class="table-auto">
+<table class="w-full table-auto">
   <thead>
     <tr>
-      <th class="w-1/6 px-4 py-2">{{ "app.created_at" | t }}</th>
-      <th class="w-1/6 px-4 py-2">{{ "app.item_id" | t }}</th>
-      <th class="w-1/6 px-4 py-2">{{ "app.buyer" | t }}</th>
-      <th class="w-1/6 px-4 py-2">{{ "app.seller" | t }}</th>
-      <th class="w-1/6 px-4 py-2">{{ "app.status" | t }}</th>
-      <th class="w-1/6 px-4 py-2">{{ "app.total" | t }}</th>
-      <th class="w-1/6 px-4 py-2">{{ "app.paid_at" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.created_at" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.item_id" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.buyer" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.seller" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.status" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.total" | t }}</th>
+      <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.paid_at" | t }}</th>
     </tr>
   </thead>
-  {% for order in orders.results %}
-    <tr>
-      <td>{% echo order.created_at | l %}</td>
-      <td><a href="/items/show?id={% echo order.properties.item_id %}">{% print order.item.properties.name %}</a></td>
-      <td>{% print order.properties.buyer %}</td>
-      <td>{% print order.properties.seller %}</td>
-      <td>
-        {% echo order.order_status.properties.status | default: 'app.order_statuses.pending_payment' | t %}
-      </td>
-      <td>{% echo order.properties.total | pricify %}</td>
-      <td>
-        {% include 'theme/simple/dashboard/orders/actions' %}
-      </td>
-    </tr>
-  {% endfor %}
+  <tbody>
+    {% for order in orders.results %}
+      <tr>
+        <td class="px-4 py-2 border-b">{{ order.created_at | l }}</td>
+        <td class="px-4 py-2 border-b"><a href="/items/show?id={{ order.properties.item_id }}">{{ order.item.properties.name }}</a></td>
+        <td class="px-4 py-2 border-b">{{ order.properties.buyer }}</td>
+        <td class="px-4 py-2 border-b">{{ order.properties.seller }}</td>
+        <td class="px-4 py-2 border-b">
+          {{ order.order_status.properties.status | default: 'app.order_statuses.pending_payment' | t }}
+        </td>
+        <td class="px-4 py-2 border-b">{{ order.properties.total | pricify }}</td>
+        <td class="px-4 py-2 border-b">
+          {% include 'theme/simple/dashboard/orders/actions' %}
+        </td>
+      </tr>
+    {% endfor %}
+  </tbody>
 </table>
