--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,16 +1,22 @@
-<form action="/s">
-  <input class="form-input my-4 w-2/4"
-    name="k"
-    type="text"
-    value="{% echo query.k %}"
-    placeholder="Search"/>
+<form action="/s" class="flex mx-4 mb-4">
+  <div class="flex-1 w-auto">
+    <label for="" class="block mb-1 text-gray-600 capitalize">Keywords</label>
+    <input class="w-full form-input "
+      name="k"
+      type="text"
+      value="{% echo query.k %}"
+      placeholder="Search" />
+  </div>
 
-    <select class="form-input w-1/4" name="tag">
-      <option value=""> tag </option>
+  <div class="w-auto mx-6">
+    <label for="" class="block mb-1 text-gray-600 capitalize">Category</label>
+    <select class="form-select" name="tag">
+      <option value="" class="text-gray-600">All categories</option>
       {% for tag in filters.tags %}
-        <option value="{% echo tag %}"{% if query.tag == tag %}selected{%endif%}>{% echo tag %}</option>
+        <option value="{{ tag }}"{% if query.tag == tag %}selected{%endif%}>{{ tag }}</option>
       {% endfor %}
     </select>
+  </div>
 
-    <input name="submit" type="submit" value="search" class="p-2 w-1/5"/>
+  <button name="submit" value="search" class="mt-auto text-center button">Search</button>
 </form>
