--- a/app/views/partials/theme/simple/items/index.liquid
+++ b/app/views/partials/theme/simple/items/index.liquid
@@ -1,6 +1,6 @@
 <section class="text-gray-700 body-font">
   <div class="container mx-auto">
-    <div class="flex flex-wrap -m-4 cards">
+    <div class="flex flex-wrap cards">
       {% if items.results.size > 0 %}
       {% for item in items.results %}
         {% include 'theme/simple/items/card', item: item %}
