--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -1,5 +1,5 @@
 .button {
-  @apply flex text-white items-center bg-blue-500 border-0 py-2 px-6 rounded;
+  @apply flex items-center px-6 py-2 text-white bg-blue-500 border-0 rounded;
 }
 
 .button:focus {
@@ -11,9 +11,13 @@
 }
 
 .button-secondary  {
-  @apply text-blue-500 bg-white border-blue-500 border-2;
+  @apply text-blue-500 bg-white border-2 border-blue-500;
 }
 
 .button-secondary:hover  {
   @apply bg-blue-100 border-blue-600;
+}
+
+.button-sm {
+  @apply px-3 py-1 text-sm;
 }
