--- a/app/views/partials/lib/users/create.liquid
+++ b/app/views/partials/lib/users/create.liquid
@@ -3,5 +3,7 @@
   if context.exports.object.valid
     include 'lib/users/save', object: context.exports.object
     include 'lib/sessions/create', object: context.exports.object
+
+    session 'current_user_id', user.email
   endif
 %}
