--- a/app/views/partials/lib/users/create.liquid
+++ b/app/views/partials/lib/users/create.liquid
@@ -4,6 +4,6 @@
     include 'lib/users/save', object: context.exports.object
     include 'lib/sessions/create', object: context.exports.object
 
-    session 'current_user_id', user.email
+    session current_user_id = user.email
   endif
 %}
