Improve logout button

--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -1,6 +1,5 @@
-<h4>{% echo 'app.dashboard' | t %}</h4>
-
-<div class='dashboard'>
+<div class='container dashboard'>
+  <h1 class="text-3xl font-medium text-gray-900 title-font">{{ 'app.dashboard' | t }}</h1>
   <div>
     <h5>{{ 'app.selling' | t }}</h5>
     <ul>
