--- a/app/views/pages/items/new.liquid
+++ b/app/views/pages/items/new.liquid
@@ -1,5 +1,5 @@
 {% liquid
   include 'lib/must_be_authenticated'
-  include 'lib/items/main'
+  include 'lib/items/data_new'
   include 'theme/simple/items/new'
 %}
