--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,6 +1,6 @@
 {% liquid
   include 'lib/must_be_authenticated'
-  include 'lib/items/main', id: params.id
+  include 'lib/items/data_edit', id: params.id
 
   if context.exports.item
     include 'theme/simple/items/edit', item: context.exports.item
