--- a/app/views/pages/items/update.liquid
+++ b/app/views/pages/items/update.liquid
@@ -1,7 +1,6 @@
 ---
 method: post
 ---
-
 {% liquid
   include 'lib/must_be_authenticated'
   include 'lib/items/validate', item: params.item
@@ -11,7 +10,7 @@ method: post
     include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
     include 'lib/events/create-event', type: 'item_updated', actor_id: context.session.current_user_id, object_id: context.exports.item.id
   else
-    include 'lib/items/main'
+    include 'lib/items/data_edit', id: params.id
     include 'theme/simple/items/edit', item: context.exports.item
   endif
 %}
