--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -1,7 +1,9 @@
 <div class="w-full p-4 mb-8 lg:w-1/3 md:w-1/2 card">
 
   <a class="relative block h-64 overflow-hidden rounded" href="/items/show?id={{ item.id }}">
-    <img alt="{% print item.properties.name %}" class="block object-cover object-center w-full h-full" src="https://dummyimage.com/640x4:3/eee/000&text={% print item.properties.name %}">
+    {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.properties.name %}
+    {% assign cover_url = item.photos[0].photo.url | default: dummy_url %}
+    <img alt="{% print item.properties.name %}" class="block object-cover object-center w-full h-full" src="{{ cover_url }}">
 
     <img alt="{% print item.properties.name %}"
       class="absolute top-0 left-0 w-10 h-10 mt-2 ml-2 opacity-50" loading="lazy"
