--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -2,8 +2,10 @@
   <div class="container px-5">
     <div class="flex flex-wrap">
       <div class="relative w-1/2">
+        {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.properties.name %}
+        {% assign cover_url = item.photos[0].photo.url | default: dummy_url %}
         <img alt="{{ item.properties.name }}" class="object-cover object-center w-full h-64 rounded lg:h-auto"
-          src="https://dummyimage.com/800x4:3/eee/000&text={% print item.properties.name %}">
+          src="{{ cover_url }}">
         <img alt="{% print item.properties.name %}" class="absolute top-0 left-0 w-10 h-10 mt-2 ml-2 opacity-50"
           src="{{ 'images/icons/' | append: item.properties.cover_photo | append: '.svg' | asset_url }}" />
       </div>
