--- a/app/views/partials/theme/simple/dashboard/orders/actions.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions.liquid
@@ -1,23 +1,23 @@
 {% if order.order_status.properties.status != 'app.order_statuses.paid' %}
-{% if order.properties.paid_at == null and role == 'seller' %}
-  <form action="/order_statuses/create" method="post">
-    {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.paid"/>
-    <input type="hidden" name="order_id" value="{{ order.id }}"/>
+  {% if order.properties.paid_at == null and role == 'seller' %}
+    <form action="/order_statuses/create" method="post">
+      {% include 'authenticity_token' %}
+      <input type="hidden" name="status" value="app.order_statuses.paid"/>
+      <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
-    <button name="" value="{{ 'app.mark-as-paid' | t }}" class="button">{{ 'app.mark-as-paid' | t }}</button>
-  </form>
-{% endif %}
+      <button class="button button-sm">{{ 'app.mark-as-paid' | t }}</button>
+    </form>
+  {% endif %}
 
-{% if order.properties.paid_at == null and role == 'buyer' %}
-  <form action="/order_statuses/create" method="post">
-    {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.paid"/>
-    <input type="hidden" name="order_id" value="{{ order.id }}"/>
+  {% if order.properties.paid_at == null and role == 'buyer' %}
+    <form action="/order_statuses/create" method="post">
+      {% include 'authenticity_token' %}
+      <input type="hidden" name="status" value="app.order_statuses.paid"/>
+      <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
-    <button name="" value="{{ 'app.pay' | t }}" class="button">{{ 'app.pay' | t }}</button>
-  </form>
-{% endif %}
+      <button class="button button-sm">{{ 'app.pay' | t }}</button>
+    </form>
+  {% endif %}
 {% endif %}
 
 {% if order.order_status.properties.status != 'app.order_statuses.paid' %}
@@ -25,6 +25,7 @@
     {% include 'authenticity_token' %}
     <input type="hidden" name="status" value="app.order_statuses.canceled"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
-    <input name="" type="submit" value="{% echo 'app.cancel' | t %}"/>
+
+    <button class="button button-sm button-secondary">{{ 'app.cancel' | t }}</button>
   </form>
 {% endif %}
