--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,7 +1,7 @@
 <form action="/s" class="flex mx-4 my-6">
   <div class="flex-1 w-auto">
-    <label for="" class="block mb-1 text-gray-600 capitalize">Keywords</label>
-    <input class="w-full form-input "
+    <label for="k" class="block mb-1 text-gray-600 capitalize">Keywords</label>
+    <input class="w-full form-input"
       name="k"
       type="text"
       value="{{ query.k }}"
@@ -9,7 +9,7 @@
   </div>
 
   <div class="w-auto mx-6">
-    <label for="" class="block mb-1 text-gray-600 capitalize">Category</label>
+    <label for="tag" class="block mb-1 text-gray-600 capitalize">Category</label>
     <select class="form-select" name="tag">
       <option value="" class="text-gray-600">All categories</option>
       {% for tag in filters.tags %}
