--- a/app/views/partials/theme/simple/users/form.liquid
+++ b/app/views/partials/theme/simple/users/form.liquid
@@ -15,5 +15,6 @@
       <span class="text-red-800">{{ object.errors.password }}</span>
     {% endif %}
   </label>
-  <button name="signup" value="signup" class="mt-3 button">Sign Up</button>
+
+  <button class="mt-3 button">Sign Up</button>
 </form>
