--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -22,7 +22,7 @@
 
       <div class="my-3">
         <label class="block" for="name">Name</label>
-        <input class="w-2/3 form-input" type="text" name="item[properties][name]" value="{{ item.properties.name }}" />
+        <input class="w-2/3 form-input" type="text" id="name" name="item[properties][name]" value="{{ item.properties.name }}" />
         {% if item.errors.properties.name %}
         <span class="text-red-800">{{ item.errors.properties.name }}</span>
         {% endif %}
@@ -30,7 +30,7 @@
 
       <div class="mt-3">
         <label class="block" for="type">Type</label>
-        <input class="w-2/3 form-input" type="text" name="item[properties][type]" value="{{ item.properties.type }}" />
+        <input class="w-2/3 form-input" type="text" id="type" name="item[properties][type]" value="{{ item.properties.type }}" />
         {% if item.errors.properties.type %}
         <span class="text-red-800">{{ item.errors.properties.type }}</span>
         {% endif %}
@@ -38,7 +38,7 @@
 
       <div class="mt-3">
         <label class="block" for="description">Description</label>
-        <textarea class="w-full form-input" type="text" name="item[properties][description]"
+        <textarea class="w-full form-input" type="text" id="description" name="item[properties][description]"
           rows="3">{{ item.properties.description }}</textarea>
 
         {% if item.errors.properties.description %}
@@ -48,7 +48,7 @@
 
       <div class="mt-3">
         <label class="block" for="tags">Tags</label>
-        <input class="w-full form-input" type="text" name="item[properties][tags]"
+        <input class="w-full form-input" type="text" id="tags" name="item[properties][tags]"
           value="{{ item.properties.tags | join: ',' }}" />
         {% if item.errors.properties.tags %}
         <span class="text-red-800">{{ item.errors.properties.tags }}</span>
@@ -57,7 +57,7 @@
 
       <div class="mt-3">
         <label class="block" for="price">Price</label>
-        <input class="w-32 form-input" type="number" name="item[properties][price]"
+        <input class="w-32 form-input" type="number" id="price" name="item[properties][price]"
           value="{{ item.properties.price | default: 10 }}" />
         {% if item.errors.properties.price %}
         <span class="text-red-800">{{ item.errors.properties.price }}</span>
@@ -66,7 +66,7 @@
 
       <div class="mt-3">
         <label class="block" for="cover_photo">Icon</label>
-        <select class="w-64 form-select" name="item[properties][cover_photo]">
+        <select class="w-64 form-select" id="price" name="item[properties][cover_photo]">
           {% for icon in context.exports.lib.icons %}
           <option value="{{ icon }}" {% if item.properties.cover_photo == icon %}selected{% endif %}>
             {{ icon }}
