--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,4 +1,4 @@
-<form action="/s" class="flex mx-4 my-6">
+<form action="/s" class="flex my-6">
   <div class="flex-1 w-auto">
     <label for="k" class="block mb-1 text-gray-600 capitalize">Keywords</label>
     <input class="w-full form-input"
