--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -11,7 +11,7 @@
 <!-- {{ item.errors }} -->
 
 <section class="text-gray-700 body-font">
-  <div class="container flex flex-wrap items-center px-5 mx-auto">
+  <div class="container flex flex-wrap items-center mx-auto">
     <form action="/items/{{ path }}" method="post" class="w-1/2 p-8 bg-gray-200 rounded-lg">
       {% include 'authenticity_token' %}
 
