--- a/app/views/partials/theme/simple/items/uppy_area.liquid
+++ b/app/views/partials/theme/simple/items/uppy_area.liquid
@@ -1,10 +1,14 @@
-<div id="drag-drop-area"></div> <!-- This is where Uppy will inject itself -->
-<div>
-  <small>
-    <ol data-s3-uppy="log"></ol>
-  </small>
-</div>
+<!-- This is where Uppy will inject itself -->
+<div id="drag-drop-area"></div>
 
-<link href="https://transloadit.edgly.net/releases/uppy/v1.6.0/uppy.css" rel="stylesheet">
-<script src="https://transloadit.edgly.net/releases/uppy/v1.6.0/uppy.js" defer></script>
+
+<!-- TODO: Use webpack to bundle it up. -->
+{%- content_for custom_styles %}
+<link href="https://transloadit.edgly.net/releases/uppy/v1.19.1/uppy.min.css" rel="stylesheet">
+{%- endcontent_for %}
+
+{%- content_for custom_scripts %}
+<script src="https://transloadit.edgly.net/releases/uppy/v1.19.1/uppy.min.js" defer></script>
 <script src="{{ 'js/images.js' | asset_url }}" defer></script>
+{%- endcontent_for %}
+
