--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,5 +1,5 @@
 <header class="text-gray-700 body-font">
-  <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
+  <div class="container flex flex-col flex-wrap items-center py-5 mx-auto md:flex-row">
     <a class="flex items-center mb-4 font-medium text-gray-900 title-font md:mb-0" href="/">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
         stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full"
@@ -24,7 +24,7 @@
       </form>
       {% else %}
       <a href="/sessions/new"
-        class="inline-flex items-center px-3 py-1 mt-4 text-base bg-gray-200 border-0 rounded focus:outline-none hover:bg-gray-300 md:mt-0">
+        class="button button-sm">
         {{ 'app.login' | t }}
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           class="w-4 h-4 ml-1" viewBox="0 0 24 24">
