--- a/app/views/partials/theme/simple/items/new.liquid
+++ b/app/views/partials/theme/simple/items/new.liquid
@@ -1,4 +1,4 @@
-<div class="container flex flex-wrap items-center px-5 mx-auto">
+<div class="container flex flex-wrap items-center mx-auto">
   <h1 class="text-3xl font-medium text-gray-900 title-font">New Item</h1>
 </div>
 
