--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -10,7 +10,7 @@
   @apply bg-blue-600;
 }
 
-.button-secondary  {
+.button-secondary {
   @apply text-blue-500 bg-white border-2 border-blue-500;
 }
 
@@ -18,6 +18,10 @@
   @apply bg-blue-100 border-blue-600;
 }
 
+.button-secondary.button-sm {
+  @apply border;
+}
+
 .button-sm {
-  @apply px-3 py-1 text-sm border;
+  @apply px-3 py-1 text-sm;
 }
