checkout button id

--- a/app/views/partials/theme/simple/orders/form.liquid
+++ b/app/views/partials/theme/simple/orders/form.liquid
@@ -37,5 +37,5 @@
   {% include 'authenticity_token' %}
   <input type="hidden" name="item_id" value="{{ item.id }}"/>
 
-  <button class="button">{{ 'app.checkout' | t }}</button>
+  <button id="#checkoutbutton" class="button">{{ 'app.checkout' | t }}</button>
 </form>
