--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -73,7 +73,7 @@
             {% include 'authenticity_token' %}
             <input type="hidden" name="id" value="{{ item.id }}">
 
-            <button class="button button-secondary">Delete</button>
+            <button id="#deletebuttonid" class="button button-secondary">Delete</button>
           </form>
         </span>
         {% endif %}
