--- a/app/views/partials/theme/simple/items/edit.liquid
+++ b/app/views/partials/theme/simple/items/edit.liquid
@@ -1,4 +1,4 @@
-<div class="container flex flex-wrap items-center px-5 mx-auto">
+<div class="container flex flex-wrap items-centermx-auto">
   <h1 class="text-3xl font-medium text-gray-900 title-font">Edit Item</h1>
 </div>
 
