--- a/app/views/partials/theme/simple/items/404.liquid
+++ b/app/views/partials/theme/simple/items/404.liquid
@@ -1,4 +1,4 @@
-<div class="container items-center px-5 mx-auto">
+<div class="container items-centermx-auto">
   <div class="mx-auto mb-2 text-center lg:w-2/6 md:w-1/2">
     <h1 class="text-3xl font-medium text-gray-900 title-font">404 item not found</h1>
     <hr>
