--- a/app/views/partials/theme/simple/users/new.liquid
+++ b/app/views/partials/theme/simple/users/new.liquid
@@ -1,5 +1,5 @@
 <section class="text-gray-700 body-font">
-  <div class="container items-center px-5 mx-auto">
+  <div class="container items-centermx-auto">
     <div class="mx-auto mb-2 text-center lg:w-2/6 md:w-1/2">
       <h1 class="text-3xl font-medium text-gray-900 title-font">Create an Account</h1>
     </div>
