--- a/app/views/pages/order_statuses/create.liquid
+++ b/app/views/pages/order_statuses/create.liquid
@@ -12,6 +12,7 @@ slug: order_statuses/create
   if context.exports[registry].valid
     include 'lib/order_statuses/create', object: context.exports[registry].object, registry: registry
 
+    include 'lib/events/create-event', type: 'order_status_created', actor_id: context.session.current_user_id, object_id: context.exports[registry].object.id
     include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/dashboard/buy/orders'
   else
     echo 'failed'
