--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -2,8 +2,8 @@
   <div class="container px-5">
     <div class="flex flex-wrap">
       <div class="relative w-1/2">
-        {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.properties.name %}
-        {% assign cover_url = item.photos[0].photo.url | default: dummy_url %}
+        {%- assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.properties.name %}
+        {%- assign cover_url = item.photos[0].photo.url | default: dummy_url %}
         <img alt="{{ item.properties.name }}" class="object-cover object-center w-full h-64 rounded lg:h-auto"
           src="{{ cover_url }}">
         <img alt="{% print item.properties.name %}" class="absolute top-0 left-0 w-10 h-10 mt-2 ml-2 opacity-50"
@@ -20,39 +20,18 @@
         </h1>
 
         <div class="flex flex-wrap mb-4">
-          {% if item.properties.tags %}
+          {%- if item.properties.tags.size > 0 %}
           <ul class="flex w-full tags">
             <li><strong>tags: </strong></li>
-            {% for tag in item.properties.tags %}
-            <li class="ml-2">{{ tag }}</li>
-            {% endfor %}
+            {%- for tag in item.properties.tags %}
+              <li class="ml-2">{{ tag }}</li>
+            {%- endfor %}
           </ul>
-          {% endif %}
+          {%- endif %}
         </div>
 
         <p class="mt-4 leading-relaxed">{% print item.properties.description %}</p>
 
-        <div class="flex items-center pb-5 mt-6 mb-5 border-b-2 border-gray-200">
-          <div class="flex items-center">
-            <span class="mr-3">Size</span>
-            <div class="relative">
-              <select
-                class="py-2 pl-3 pr-10 text-base border border-gray-400 rounded appearance-none focus:outline-none focus:border-blue-500">
-                <option>SM</option>
-                <option>M</option>
-                <option>L</option>
-                <option>XL</option>
-              </select>
-              <span
-                class="absolute top-0 right-0 flex items-center justify-center w-10 h-full text-center text-gray-600 pointer-events-none">
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  class="w-4 h-4" viewBox="0 0 24 24">
-                  <path d="M6 9l6 6 6-6"></path>
-                </svg>
-              </span>
-            </div>
-          </div>
-        </div>
         <div class="flex">
           <span class="text-2xl font-medium text-gray-900 title-font">{{ item.properties.price | pricify }}</span>
 
@@ -64,19 +43,21 @@
           </form>
         </div>
 
-        {% if item.properties.owner == context.session.current_user_id %}
+        {%- if item.properties.owner == context.session.current_user_id %}
         <p class="py-4 mt-4 border-t border-blue-300">Item Administration</p>
         <span class="flex">
           <a href="/items/edit?id={{ item.id }}" class="button">Edit</a>
 
-          <form action="/items/delete" method="post" class="ml-2">
+          <form action="/items/delete" method="post" class="ml-2"
+            onSubmit="if(!confirm('Are you sure you want to delete this item?')){ return false; }"
+          >
             {% include 'authenticity_token' %}
             <input type="hidden" name="id" value="{{ item.id }}">
 
             <button id="deletebutton" class="button button-secondary">Delete</button>
           </form>
         </span>
-        {% endif %}
+        {%- endif %}
 
       </div>
     </div>
